# integration_tests

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  README.md
integ_test/integ_test_buffer/: CMakeLists.txt  package.xml
integ_test/integ_test_latency/tests/: LatencyTest.cpp  LatencyTest.test
integ_test/integ_test_occlusion_map_gen/tests/: OcclusionMapGeneratorTest.cpp  config.xml
integ_test/integ_test_occlusion_map_gen/tests/data/: config.xml
integ_test/integ_test_realsense_sensors/: CMakeLists.txt  package.xml
integ_test/integ_test_realsense_sensors/tests/: RealsenseSensorTest.cpp
integ_test/integ_test_robot_filter/: CMakeLists.txt  package.xml
integ_test/integ_test_robot_filter/tests/: OpenCLRobotMaskGeneratorTest.cpp
integ_test/integ_test_robot_observer/: CMakeLists.txt  package.xml
integ_test/integ_test_robot_observer/tests/: Common.hpp  RobotObserverManagerTest.cpp  RobotObserverManagerTest.test  RobotProxyTest.cpp  RosRobotObserverTest.cpp  RosRobotObserverTest.test
integ_test/integ_test_runtime_sim/tests/: RuntimeSimTest.cpp  RuntimeSimTest.test
integ_test/integ_test_sim_sensor/: CMakeLists.txt  package.xml
integ_test/integ_test_sim_sensor/tests/: MeshImageGeneratorTest.cpp  SimSensorTest.cpp
integ_test/integ_test_sim_sensor/tests/data/: fiducial_plate.dae
metal/commit/integ_test_runtime_sim/: package.xml
metal/metal_commit/integ_test_realsense_sensors/: package.xml
metal/metal_commit/integ_test_robot_observer/: package.xml
metal/metal_nightly/reg_test_calibration_sim/: CMakeLists.txt  package.xml
metal/metal_nightly/reg_test_record_playback/: package.xml
metal/metal_nightly/unit_test_robot_filter/: package.xml
metal/metal_nightly/unit_test_sim_sensor/: CMakeLists.txt
metal/metal_sandbox/integ_test_occlusion_map_gen/: CMakeLists.txt  package.xml
metal/metal_sandbox/integ_test_occlusion_map_gen/tests/data/calibration/: INTEL_REALSENSE_D435_4_occlusion.xml
metal/metal_sandbox/integ_test_realsense_sensors/: CMakeLists.txt
metal/metal_sandbox/integ_test_robot_observer/: CMakeLists.txt  package.xml
metal/metal_sandbox/integ_test_robot_observer/tests/: RobotObserverManagerTest.cpp  RobotObserverManagerTest.test  RosRobotObserverTest.cpp  RosRobotObserverTest.test  RosRobotProxyControllerTest.cpp  RosRobotProxyControllerTest.test
metal/metal_sandbox/integ_test_runtime_sim/: CMakeLists.txt
metal/metal_sandbox/integ_test_runtime_sim/tests/: RuntimeSimTest.cpp
metal/metal_sandbox/unit_test_data_sub_man/: CMakeLists.txt
metal/metal_sandbox/unit_test_sim_sensor/: package.xml
metal/sandbox/unit_test_buffer/: package.xml
real-robot/nightly/integ_test_latency/: CMakeLists.txt  package.xml
real-robot/nightly/reg_test_calibration/: CMakeLists.txt
reg_test/reg_test_calibration/: package.xml
reg_test/reg_test_calibration/tests/: CalibrationRobotTest.cpp  CalibrationRobotTest.test
reg_test/reg_test_calibration_sim/: CMakeLists.txt  package.xml
reg_test/reg_test_calibration_sim/test/: CalibrationSimTest.cpp  cal_sim copy.test  cal_sim.test
reg_test/reg_test_calibration_sim/tests/: CalibrationSimTest.cpp  RecordPlaybackSimTest.cpp  record_playback.test
reg_test/reg_test_record_playback/: CMakeLists.txt
reg_test/reg_test_record_playback/tests/: RecordPlaybackSimTest.cpp  RecordPlaybackSimTest.test
rtr_test_cmake_defs/: CMakeLists.txt  package.xml
rtr_test_cmake_defs/cmake/: cmake_functions-extras.cmake.develspace.in  cmake_functions-extras.cmake.installspace.in
rtr_test_cmake_defs/cmake/functions/: test_functions.cmake
rtr_test_harness/: CMakeLists.txt  package.xml
rtr_test_harness/inc/rtr_test_harness/: ApplianceTestHelper.hpp  BenchmarkManager.hpp  GroundTruthRobot.hpp  MetricPublisher.hpp  RapidSenseTest.hpp  RapidSenseTestConfigs.hpp  RapidSenseTestHarnessServer.hpp  RapidSenseTestHelper.hpp  WebappCommander.hpp
rtr_test_harness/src/: ApplianceTestHelper.cpp  BenchmarkManager.cpp  GroundTruthRobot.cpp  MetricPublisher.cpp  RapidSenseTest.cpp  RapidSenseTestConfigs.cpp  RapidSenseTestHarnessServer.cpp  RapidSenseTestHelper.cpp  WebappCommander.cpp  rapidsense_benchmarker.cpp  run_rapidsense_tests.cpp
scripts/: catkin-test  format-code.sh  run_perc_tests.sh  sync-nas
test_data/alphabot_calibration_test/: alphabot.json  params.txt
test_data/alphabot_calibration_test/rapidsense_data/: rapidsense_config.xml
test_data/melcobot_calibration_test/: melcobot.json  params.txt
test_data/melcobot_calibration_test/melcobot_calibration_test/: rapidsense_config.xml
test_data/melcobot_calibration_test/rapidsense_data/: rapidsense_config.xml
test_data/rocket_power/: otto.json  reggie.json  squid.json  twister.json
test_data/rocket_power/rapidsense_data/: rapidsense_config.xml
test_data/ur3_calibration_test/: params.txt  rapidsense_config.xml  ur3.json
test_data/ur3_calibration_test/calibration/: INTEL_REALSENSE_D435_399681924098.xml  INTEL_REALSENSE_D435_399681924098_report.xml  INTEL_REALSENSE_D435_531991426173.xml  INTEL_REALSENSE_D435_841712419527_report.xml  INTEL_REALSENSE_D435_996426749849_report.xml  calibration_config.xml
test_data/ur3_calibration_test/rapidsense_data/: rapidsense_config.xml
test_data/ur3_calibration_test/ur3/: rapidsense_config.xml
test_data/ur3_proxycontroller_test/rapidsense_data/: rapidsense_config.xml
test_data/ur3_runtime_test/: ur3.json
test_data/ur3_runtime_test/rapidsense_data/: rapidsense_config.xml
unit_test/unit_test_buffer/: CMakeLists.txt
unit_test/unit_test_buffer/tests/: BufferTest.cpp
unit_test/unit_test_data_sub_man/: package.xml
unit_test/unit_test_data_sub_man/tests/: DataSubscriberManagerTest.cpp
unit_test/unit_test_robot_filter/: CMakeLists.txt
unit_test/unit_test_robot_filter/tests/: OpenCLRobotMaskGeneratorTest.cpp  RobotFilterFrameRateTest.cpp  RobotFilterTest.cpp
unit_test/unit_test_sensor_frame/: CMakeLists.txt  package.xml
unit_test/unit_test_sensor_frame/tests/: SensorFrameTest.cpp
unit_test/unit_test_sim_sensor/tests/: MeshImageGeneratorTest.cpp  SimSensorTest.cpp
(+80 files in other folders)
