<?xml version="1.0"?>
<package format="2">
    <name>rtr_test_cmake_defs</name>
    <version>1.3.0</version>
    <description>A package that contains common cmake functions and setting for rapidsense_test</description>
    <maintainer email="jenni@rtr.ai">Jenni</maintainer>
    <license>PROPRIETARY</license>

    <build_depend>cmake_modules</build_depend>
    <buildtool_depend>catkin</buildtool_depend>

    <export>
        <architecture_independent/>
    </export>
</package>
