<?xml version="1.0"?>
<package format="2">
  <name>rtr_test_harness</name>
  <version>1.3.0</version>
  <description>The rtr_test_harness package</description>
  <maintainer email="jenni@todo.todo">jenni</maintainer>
  <license>PROPRIETARY</license>

  <build_depend>cmake_modules</build_depend>
  <build_depend>libboost-program-options-dev</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <depend version_gte="1.3.0">rtr_appliance</depend>
  <depend version_gte="1.3.0">rtr_control_ros</depend>
  <depend version_gte="1.3.0">rtr_msgs</depend>
  <depend version_gte="1.3.0">rtr_perc_api</depend>
  <depend version_gte="1.3.0">rtr_perc_rapidsense</depend>
  <depend version_gte="1.3.0">rtr_perc_rapidsense_ros</depend>
  <depend version_gte="1.3.0">rtr_perc_sensors_ros</depend>
  <depend version_gte="1.3.0">rtr_perc_sensors</depend>
  <depend version_gte="1.3.0">rtr_perc_spatial</depend>
  <depend version_gte="1.3.0">rtr_roadmapgen</depend>
  <depend version_gte="1.3.0">tbb2</depend>
  <depend version_gte="1.3.0">matplotlib-cpp</depend>
  <depend>actionlib</depend>
  <depend>rtr_spatial_perception</depend>
  <depend>actionlib_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>eigen_conversions</depend>
  <depend>image_transport</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>visualization_msgs</depend>
  <exec_depend>libboost-program-options</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rqt_plot</exec_depend>
  <exec_depend>rviz</exec_depend>
  <test_depend>rosbash</test_depend>

  <!--
       because the rtr_utils log-export script iterates over rdepends and we
       want it to find this package
  -->
  <exec_depend version_gte="1.3.0">rtr_utils</exec_depend>

  <!--
       because the rtr_appliance_app provides the roscore systemd service unit
  -->
  <exec_depend version_gte="1.3.0">rtr_appliance_app</exec_depend>
</package>
