<?xml version="1.0"?>
<package format="2">
  <name>integ_test_sim_sensor</name>
  <version>1.3.0</version>
  <description>sim sensor integration tests</description>
  <maintainer email="jenni@todo.todo">jenni</maintainer>
  <license>PROPRIETARY</license>
    <build_depend>cmake_modules</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <!-- These test_depends are for python unit tests -->
  <depend version_gte="1.3.0">rtr_geometry</depend>
  <depend version_gte="1.3.0">rtr_perc_calibration</depend>
  <depend version_gte="1.3.0">rtr_perc_spatial</depend>
  <depend version_gte="1.3.0">rtr_utils</depend>
</package>
