<?xml version="1.0"?>
<package format="2">
  <name>reg_test_calibration_sim</name>
  <version>1.3.0</version>
  <description>calibration sim test</description>
  <maintainer email="jenni@todo.todo">jenni</maintainer>
  <license>PROPRIETARY</license>
    <build_depend>cmake_modules</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <!-- These test_depends are for python unit tests -->
  <test_depend>rosunit</test_depend>
  <test_depend>python-catkin-pkg-modules</test_depend>
  <test_depend>python-catkin-pkg</test_depend>
  <depend version_gte="1.3.0">fast-quadric-mesh-simplification</depend>
  <depend version_gte="1.3.0">rtr_app_layer</depend>
  <depend version_gte="1.3.0">rtr_core</depend>
  <depend version_gte="1.3.0">rtr_geometry</depend>
  <depend version_gte="1.3.0">rtr_appliance</depend>
  <depend version_gte="1.3.0">rtr_planning</depend>
  <depend version_gte="1.3.0">rtr_math</depend>
  <depend version_gte="1.3.0">rtr_occupancy</depend>
  <depend version_gte="1.3.0">rtr_utils</depend>
  <depend version_gte="1.3.0">rtr_appliance_app</depend>
  <depend version_gte="1.3.0">rtr_test_harness</depend>
  <depend version_gte="1.3.0">rtr_voxelize_plugins</depend>
  <depend version_gte="1.3.0">rtr_control</depend>
  <depend version_gte="1.3.0">rtr_robots</depend>
  <depend version_gte="1.3.0">rtr_api</depend>
  <depend version_gte="1.3.0">rtr_perc_rapidsense</depend>
  <depend version_gte="1.3.0">rtr_perc_rapidsense_ros</depend>
  <depend version_gte="1.3.0">rtr_control_ros</depend>
  <depend version_gte="1.3.0">rtr_msgs</depend>
  <depend version_gte="1.3.0">rtr_ros_utils</depend>
  <depend>tinyxml</depend>
  <depend>urdf</depend>
  <depend>rospy</depend>
</package>
