<?xml version="1.0"?>
<package format="2">
  <name>unit_test_data_sub_man</name>
  <version>1.3.0</version>
  <description>data sub man  tests</description>
  <maintainer email="anoronha@rtr.ai">Aarati</maintainer>
  <license>PROPRIETARY</license>
  <build_depend>cmake_modules</build_depend>
  <build_depend version_gte="1.3.0">rtr_test_cmake_defs</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <depend version_gte="1.3.0">rtr_perc_api</depend>
  <depend version_gte="1.3.0">rtr_utils</depend>
</package>
