<?xml version="1.0"?>
<package format="2">
  <name>integ_test_runtime_sim</name>
  <version>1.3.0</version>
  <description>runtime sim test</description>
  <maintainer email="jenni@todo.todo">jenni</maintainer>
  <license>PROPRIETARY</license>
  <build_depend>cmake_modules</build_depend>
  <build_depend version_gte="1.3.0">rtr_cmake_defs</build_depend>
  <build_depend version_gte="1.3.0">rtr_test_cmake_defs</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <!-- These test_depends are for python unit tests -->
  <test_depend>rosunit</test_depend>
  <depend version_gte="1.3.0">rtr_appliance</depend>
  <depend version_gte="1.3.0">rtr_perc_rapidsense_ros</depend>
  <depend version_gte="1.3.0">rtr_ros_utils</depend>
  <depend version_gte="1.3.0">rtr_test_harness</depend>
  <depend version_gte="1.3.0">rtr_utils</depend>
</package>
