<?xml version="1.0"?>
<package format="2">
  <name>unit_test_robot_filter</name>
  <version>1.3.0</version>
  <description>robot filter integration tests</description>
  <maintainer email="jenni@todo.todo">jenni</maintainer>
  <license>PROPRIETARY</license>
  <build_depend>cmake_modules</build_depend>
  <depend version_gte="1.3.0">rtr_test_cmake_defs</depend>
  <buildtool_depend>catkin</buildtool_depend>
  <depend version_gte="1.3.0">rtr_perc_spatial</depend>
  <depend version_gte="1.3.0">rtr_utils</depend>
</package>
