<?xml version="1.0"?>
<package format="2">
  <name>integ_test_occlusion_map_gen</name>
  <version>1.3.0</version>
  <description>Occlusion map generator test</description>
  <maintainer email="aakash@rtr.ai">jenni</maintainer>
  <license>PROPRIETARY</license>
  <build_depend>cmake_modules</build_depend>
  <build_depend version_gte="1.3.0">rtr_test_cmake_defs</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <depend version_gte="1.3.0">rtr_geometry</depend>
  <depend version_gte="1.3.0">rtr_perc_spatial</depend>
  <depend version_gte="1.3.0">rtr_utils</depend>
</package>
